[package]
name = "day06"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.6.2"
structopt = "0.3.26"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
