[package]
name = "day11"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
derive_builder = "0.12.0"
num-integer = "0.1.45"
parse-display = "0.7.0"
structopt = "0.3.21"
thiserror = "1.0.22"
