[package]
name = "day11"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.6.2"
derive_builder = "0.12.0"
num-integer = "0.1.45"
parse-display = "0.8.2"
structopt = "0.3.26"
thiserror = "1.0.50"
