[package]
name = "day13"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
derive_more = "0.99.17"
structopt = "0.3.21"
thiserror = "1.0.22"

[dev-dependencies]
rstest = "0.16.0"
