[package]
name = "day15"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.6.2"
num-traits = "0.2.15"
parse-display = "0.8.0"
rayon = { version = "1.7.0", optional = true }
structopt = "0.3.26"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"

[features]
default = ["parallelism"]
parallelism = ["rayon"]
