[package]
name = "day16"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.6.2"
enum-as-inner = "0.5.1"
parse-display = "0.8.0"
structopt = "0.3.26"
thiserror = "1.0.40"
